# roast-vm

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
crates/core/: Cargo.toml
crates/core/src/: attributes.rs  bimage.rs  class.rs  class_loader.rs  error.rs  instructions.rs  jni.rs  lib.rs  macros.rs  main.rs  native_libraries.rs  object.rs  object_manager.rs  prim.rs  thread.rs  value.rs  vm.rs
crates/core/src/class_file/: class_file.rs  constant_pool.rs  mod.rs
crates/core/src/objects/: array.rs  mod.rs  object.rs  object_manager.rs
crates/jvm-rs-sys/: Cargo.toml
crates/jvm-rs-sys/src/: lib.rs
crates/roast-vm-sys/: Cargo.toml
crates/roast-vm-sys/src/: class.rs  lib.rs  misc_unsafe.rs  object.rs  system.rs
src/: attributes.rs  bimage.rs  class.rs  class_file.rs  class_loader.rs  lib.rs  macros.rs  main.rs  rng.rs  thread.rs  vm.rs
src/class_file/: class_file.rs  constant_pool.rs  mod.rs
