[package]
name = "jvm-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
deku = { version = "0.20.0", features = ["logging"] }
deku_derive = "0.20.0"
log = "0.4.28"
env_logger = "0.11.8"
itertools = "0.14.0"
sevenz-rust2 = { version = "0.19.3", features = ["brotli", "zstd"] }

[build-dependencies]
bindgen = "0.72.1"

[lints.rust]
missing_docs = "warn"